--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: go build .
+      run: go build -ldflags="-s -w" .
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
